test/deprecated-keyword/deprecateForwarding.good
deprecateForwarding.chpl:5: error: Can't deprecate a forwarding statement
